crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__std_ref_read_only.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
10
20
30
40
50
