crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__std_vec.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: integer safety verification failed (SAT counterexamples found):
main#IntVec__get_reversed#i32#.oac_integer_site_i32__sub__18 (root=main, caller=IntVec__get_reversed, op=sub, semantic_type=I32, qbe_artifact=site_main_IntVec__get_reversed_i32__oac_integer_site_i32__sub__18.qbe, smt_artifact=site_main_IntVec__get_reversed_i32__oac_integer_site_i32__sub__18.smt2)
main#IntVec__pop#i32#.oac_integer_site_i32__sub__40 (root=main, caller=IntVec__pop, op=sub, semantic_type=I32, qbe_artifact=site_main_IntVec__pop_i32__oac_integer_site_i32__sub__40.qbe, smt_artifact=site_main_IntVec__pop_i32__oac_integer_site_i32__sub__40.smt2)
main#IntVec__push#i32#.oac_integer_site_i32__add__55 (root=main, caller=IntVec__push, op=add, semantic_type=I32, qbe_artifact=site_main_IntVec__push_i32__oac_integer_site_i32__add__55.qbe, smt_artifact=site_main_IntVec__push_i32__oac_integer_site_i32__add__55.smt2)
main#IntVec__reserve#i32#.oac_integer_site_i32__add__10 (root=main, caller=IntVec__reserve, op=add, semantic_type=I32, qbe_artifact=site_main_IntVec__reserve_i32__oac_integer_site_i32__add__10.qbe, smt_artifact=site_main_IntVec__reserve_i32__oac_integer_site_i32__add__10.smt2)
main#IntVec__set_reversed#i32#.oac_integer_site_i32__sub__39 (root=main, caller=IntVec__set_reversed, op=sub, semantic_type=I32, qbe_artifact=site_main_IntVec__set_reversed_i32__oac_integer_site_i32__sub__39.qbe, smt_artifact=site_main_IntVec__set_reversed_i32__oac_integer_site_i32__sub__39.smt2)
