crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__string_slice.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PRE-001] Error: function precondition verification failed: solver returned unknown for function precondition obligation main#main#1#0#pre_3 (root=main, caller=main, callee=slice, clause=3, qbe_artifact=site_main_main_1_0_pre_3.qbe, smt_artifact=site_main_main_1_0_pre_3.smt2, attempts=[10s:unknown(timeout), 30s:unknown(timeout)]). verification is fail-closed until this obligation is proven unsat
