crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__string_struct.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
---
COMPILATION ERROR

expected statement instead of Some(Parenthesis { opening: '{', is_opening: true })
