crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__struct_equality_v2_memcmp.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
11
21
31
41
52
