crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__struct_invariant_bad_signature.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

invariant __struct__Counter__invariant must return Bool, got I32
