crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__struct_invariant_pass_complex.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-INV-001] Error: struct invariant verification failed: struct invariant verification failed (SAT counterexamples found):
main#3#0#stable_envelope (caller=main, callee=make_envelope, struct=Envelope, invariant="envelope stays normalized and stable (id=stable_envelope)", witness=cfg_path=b0, bad_ret_temp=%si_bad, qbe_artifact=site_main_3_0_stable_envelope.qbe, smt_artifact=site_main_3_0_stable_envelope.smt2, program_input="main() has no inputs (counterexample is input-independent)")
